2009-07-21  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c:
	  Handle validation of IP Address fields.
	* common/libnwamui.h, common/libnwamui.c: 
	  Added several functions to handle GtkEntry and ip address
	  validations : nwamui_util_validate_ip_address(),
	  nwamui_util_set_entry_ip_address_only(),
	  nwamui_util_split_address_prefix(),
	  nwamui_util_join_address_prefix().
	* common/nwamui_ncu.c: 
	  Fix handling of x.x.x.x/N format addresses on loading of
	  configuration. 

2009-07-21  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncp.c: 
	  Change some warnings to be debug statements.
	* daemon/status_icon.c: 
	  Fix bug in daemon_status_changed which was blanking the menus when
	  the daemon state changed.
	  Added handlers for the new daemon enm and env list notifications.

2009-07-20  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c, capplet/nwam_location_dialog.c: 
	  Use the ENV enabled property as the transient state, which will
	  later be acted upon on commit to enable the location.
	* capplet/nwam-manager-properties.ui, common/libnwamui.h,
	  common/libnwamui.c: 
	  Make the rename dialog ok turn on/off based on length of string.
	  Also add a function to convert netmask str to prefixlen.
	* capplet/nwam_conn_conf_ip_panel.c: 
	  Fis bug#10060 to enable configuring of manual addresses.
	* capplet/nwam_tree_view.c: 
	  Fix possible crash on NULL de-ref.
	* common/nwamui_daemon.c: 
	  Change functions to append/remove env/enm/ncp to first check for
	  existance, and also to fire notify events on change.
	* common/nwamui_env.c: 
	  Fix bug#10030 to allow cloning of locations.
	* common/nwamui_ip.c: 
	  Change DHCP/STATIC to be mutually exclusive, changing one changes
	  the other.
	* common/nwamui_ncu.h, common/nwamui_ncu.c: 
	  Fix an issue w.r.t. guint64 being cast to array of enums - they
	  sizes differ, so was picking up wrong values of v6 enabled or not.